# python-package-skeleton

./: .flake8  .gitignore  README.md  pyproject.toml
